# maintainer-signal-kit

./: .gitignore  .maintainer-signal.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ADOPTION_PLAN.md  AI_USAGE_POLICY.md  ARCHITECTURE.md  CODEX_WORKFLOWS.md  EXAMPLE_EVIDENCE_PACK.md  MAINTAINER_GUIDE.md  PRODUCT_BRIEF.md  PROGRAM_RESEARCH_NOTES.md  ROADMAP.md  SAMPLE_OUTPUT.md  SELECTION_READINESS.md  THREAT_MODEL.md  codex-for-open-source-application-draft.md
examples/: maintainer-signal.example.json  public-repo-metrics.md
src/maintainer_signal_kit/: __init__.py  audit.py  cli.py  github.py  models.py  pack.py  profile.py  readiness.py  redact.py  render.py
tests/: test_audit.py
